# scrape-attack

./: .gitignore  FeatureExtractor.py  README.md  app.py  callsign_links.txt  city_info.py  data_lines.txt  feeds.py  fetch_internet_data_app.py  fetch_rss_data.py  location_extractor.py  newdomains.txt  parse_zips.py  requirements.txt  rss_feeds.json  rss_fetch_app.py  scrape_local_news.py  sqlfile.py  stationindex.py  stations.py  summary.py  temp.txt
assets/: url_unrelated_keywords.txt  whitelist.txt
pull_internet_data/: feeds.py
scraper_command_line_utility/: Makefile  pylama.ini  pyproject.toml  timestamp.txt  tox.ini
scraper_command_line_utility/.github/workflows/: run-tool.yaml
scraper_command_line_utility/scraper/: __init__.py  __main__.py  fetch_rss_data.py  main.py  parse_zips.py  paths.py  sqlfile.py  stationindex.py
scraper_command_line_utility/scraper/config/story_info/: new_domains.txt  nopelist.txt  rss_feeds.json  whitelist.txt
scraper_command_line_utility/scraper/pull_internet_data/: FeatureExtractor.py  scrape.py
scraper_command_line_utility/scraper/text_parser/: download-searches.py  get_keywords.py  html-to-pretty-print.py  html_to_freq.py  html_to_kwic.py  local_parse.py
scraper_command_line_utility/tests/: test_main.py
stationindex_api/: .gitignore  Makefile  all-stations.json  pyproject.toml  pytest.ini  tox.ini
stationindex_api/stationindex/: __init__.py  client.py  main.py
stationindex_api/tests/samples/tv/by-owner/: ABC  index.html
stationindex_api/tests/samples/tv/callsign/: KABC
tests/: tests.py
(+234 files in other folders)
